k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-reviews
  labels:
    app: hotel-reviews
    environment: base
